--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,6 +1,6 @@
 <h1>hello</h1>
 
 <% @images.each do |image|%>
-  <div><%= image.title %></div>
+  <div><%= image_tag image.file.url(:medium) %></div>
 <% end %>
 
