--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
-
+<h1>All users</h1>
+<% @users.each do |user|%>
+  <div><%= user.email %></div><br />
+<% end %>
