--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tag %>
+    <title>Flickr</title>
+
+    <%= csrf_meta_tags %>
 </head>
 <body>
-  <div id='header'>
+<div class="mainbar-fix-top" role="navigation">
+  <div class="container">
+    <div class="mainbar-header">
     <% if signed_in? -%>
-      Hello <%= current_user.email %> <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
-    <% else -%>
-      <%= link_to t('.sign_in'), sign_in_path %>
-    <% end -%>
+      <span>
+        Hello, <a href="mailto:<%= current_user.email %>"><%= current_user.email %></a> | <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
+        <% else -%>
+          <%= link_to t('.sign_in'), sign_in_path %>
+        <% end -%>
+      </span>
+    </div>
   </div>
+</div>
 
   <div id='flash'>
     <% flash.each do |key, value| -%>
