--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,4 +1,89 @@
-*{
-  box-sizing: border-box;
-  color: #3b3b3b;
+
+$blue: #067ab4;
+$white: #fff;
+
+
+.mainbar-fix-top {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 30px;
+    background-color: $blue;
+
+    span {
+        font-family: Arial;
+        font-size: 12px;
+        color: $white;
+
+        a {
+
+        }
+    }
+}
+
+.form-container {
+  top: 200px;
+  left: 300px;
+}
+
+
+.sign-form {
+
+  h4 {
+    margin-top:30px;
+    margin-left: 20px;
+  }
+
+  a {
+    -webkit-appearance: none;
+    cursor: pointer;
+    background-color: #fe0000;
+    text-align: center;
+    color: #fff;
+    border-radius: 5px;
+    line-height: 16px;
+    margin-top: 35px;
+    padding: 10px 30px;
+    text-decoration: none;
+    display: inline-block;
+    margin-left: 20px;
+  }
+}
+
+#clearance {
+  @extend .intro;
+
+  label {
+    margin-top: 25px;
+    margin-left: 20px;
+  }
+}
+
+
+input {
+  display: block;
+  width: 350px;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  color: #555;
+  background-color: $white;
+  background-image: none;
+  border: 1px solid $blue;
+  border-radius: 4px;
+  margin-left: 20px;
+}
+
+input[type="submit"] {
+  background-color: $blue;
+  text-align: center;
+  color: $white;
+  border-radius: 5px;
+  line-height: 16px;
+  margin-top: 35px;
+  margin-bottom: 30px;
+  padding: 10px 30px;
+  text-decoration: none;
+  display: inline-block;
+  width: auto;
 }
