--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,11 @@
-<div class='text-field'>
-  <%= form.label :email %>
-  <%= form.text_field :email, :type => 'email' %>
-</div>
+<div class="form-container">
+    <div class='text-field'>
+      <%= form.label :email %>
+      <%= form.text_field :email, :type => 'email' %>
+    </div>
 
-<div class='password-field'>
-  <%= form.label :password %>
-  <%= form.password_field :password %>
+    <div class='password-field'>
+      <%= form.label :password %>
+      <%= form.password_field :password %>
+    </div>
 </div>
