--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,7 @@
 <h1>Users#index</h1>
 <p>Find me in app/views/users/index.html.erb</p>
 <div><%= @user.email %></div><br />
-
+<h2>My uploads</h2>
+<% @images.each do |image|%>
+  <div><%= image_tag image.file.url(:medium) %></div>
+<% end %>
