--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,14 +1,53 @@
 
 $blue: #067ab4;
 $white: #fff;
+$light-grey: #d3d3d3;
 
+* {
+  border: 0px solid #fe0000;
+}
+
+#container {
+  margin: 10px 0 0 20px;
+}
+
+.container {
+  margin: 0;
+}
+
+.mainbar-header,
+.mainbar-header a {
+  color: $light-grey;
+  width: 100%;
+
+   ul li{
+      color: $white;
+      list-style-type: none;
+      font-family: Arial;
+      font-style: italic;
+      font-size: 11px;
+      padding-left: 9px;
+      display: inline;
+
+      a {
+        color: $white;
+        text-decoration: none !important;
+
+        &:hover {
+          color: $light-grey;
+          border-bottom: 1px $white dotted;
+        }
+      }
+    }
+}
 
 .mainbar-fix-top {
     top: 0;
     left: 0;
     width: 100%;
-    height: 30px;
+    height: 40px;
     background-color: $blue;
+    position: left;
 
     span {
         font-family: Arial;
@@ -16,7 +55,8 @@ $white: #fff;
         color: $white;
 
         a {
-
+          color: $light-grey;
+          text-decoration: underline;
         }
     }
 }
@@ -26,12 +66,10 @@ $white: #fff;
   left: 300px;
 }
 
-
 .sign-form {
 
   h4 {
     margin-top:30px;
-    margin-left: 20px;
   }
 
   a {
@@ -46,7 +84,6 @@ $white: #fff;
     padding: 10px 30px;
     text-decoration: none;
     display: inline-block;
-    margin-left: 20px;
   }
 }
 
@@ -55,7 +92,6 @@ $white: #fff;
 
   label {
     margin-top: 25px;
-    margin-left: 20px;
   }
 }
 
@@ -71,7 +107,6 @@ input {
   background-image: none;
   border: 1px solid $blue;
   border-radius: 4px;
-  margin-left: 20px;
 }
 
 input[type="submit"] {
