--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,17 @@
 <div class="mainbar-fix-top" role="navigation">
   <div class="container">
     <div class="mainbar-header">
-    <% if signed_in? -%>
-      <span>
-        Hello, <a href="mailto:<%= current_user.email %>"><%= current_user.email %></a> | <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
-        <% else -%>
-          <%= link_to t('.sign_in'), sign_in_path %>
-        <% end -%>
-      </span>
+      <% if signed_in? -%>
+        <span>
+          Hello, <a href="mailto:<%= current_user.email %>"><%= current_user.email %></a> | <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
+          <ul>
+            <li><a href="#">My Profile</a></li>
+            <li><a href="#">Upload Photo</a></li>
+          </ul>
+          <% else -%>
+            <%= link_to t('.sign_in'), sign_in_path %>
+          <% end -%>
+        </span>
     </div>
   </div>
 </div>
@@ -27,6 +31,8 @@
     <% end %>
   </div>
 
-  <%= yield %>
+  <div id="container">
+    <%= yield %>
+  </div>
 </body>
 </html>
