--- a/app/views/images/new.html.erb
+++ b/app/views/images/new.html.erb
@@ -1,10 +1,24 @@
-<h1>Add new Image</h1>
-
-<% if signed_in? %>
-  <%= form_for @image, :html => { :multipart => true } do |form| %>
-	  <%= form.file_field :file %>
-	  <%= form.submit %>
+<div class="container">
+	<h1>Add new Image</h1>
+	<% if signed_in? %>
+	  <%= form_for @image, :html => { :multipart => true } do |form| %>
+		  <div class="row section-row">
+		  	<div class="col-md-1">Image</div>
+		  	<div class="col-md-11"><%= form.file_field :file %></div>
+		  </div>
+		  <div class="row section-row">
+		  	<div class="col-md-1">Title</div>
+		  	<div class="col-md-10"><%= form.text_field :title %></div>
+		  </div>
+		  <div class="row section-row">
+		  	<div class="col-md-1">Description</div>
+		  	<div class="col-md-10"><%= form.text_field :description %></div>
+		  </div>
+		  <div class="row">
+		  	<%= form.submit %>
+		  </div>
+		<% end %>
+	<% else %>
+	  <h2>You need to <%= link_to 'Sign in', sign_in_path %></h2>
 	<% end %>
-<% else %>
-  <h2>You need to <%= link_to 'Sign in', sign_in_path %></h2>
-<% end %>
+</div>
