--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
         <span>
           Hello, <a href="mailto:<%= current_user.email %>"><%= current_user.email %></a> | <%= link_to t('.sign_out'), sign_out_path, :method => :delete %>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/images">Home</a></li>
+            <li><a href="/users/">Members</a></li>
             <li><a href="/users/<%= current_user.id %>">My Profile</a></li>
             <li><a href="/images/new">Upload Photo</a></li>
           </ul>
